--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.8.1",
+    "dotenv": "^16.4.7",
     "node-telegram-bot-api": "^0.66.0",
+    "nodemon": "^3.1.9",
     "request": "^2.88.2"
   }
 }
