--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.9",
     "request": "^2.88.2"
