--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.9",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "firebase-admin": "^13.4.0"
   }
 }
